E Commerce flex wrap issue

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ img {
     width: 100%;
     height: 100%;
     max-height: 50vh;
-    padding: 20px;
 }
 
 p {
@@ -227,6 +226,7 @@ FEATURES
 
 .books {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .book {
@@ -237,6 +237,7 @@ FEATURES
 .book__img {
     max-height: 380px;
     transition: all 300ms ease;
+    cursor: not-allowed;
 }
 
 .book__img--wrapper {
@@ -248,4 +249,35 @@ FEATURES
 
 .book:hover .book__img {
     transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover {
+    text-decoration: underline;
+    cursor: not-allowed;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a
+}
+
+.book__price--normal {
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
+}
+
+/*
+
+LATEST
+
+*/
+
+#latest {
+    padding-top: 8vw;
 }
